--- a/god.test/pom.xml
+++ b/god.test/pom.xml
@@ -94,6 +94,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<scope>provided</scope>
+			<version>2.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
